Exclude directory with generated contents.

--- a/pom.xml
+++ b/pom.xml
@@ -361,6 +361,7 @@
             <exclude>.ekstazi/**</exclude>
             <exclude>src/site/resources/txt/userguide/stress/dh/**</exclude>
             <exclude>src/site/resources/txt/userguide/stress/tu/**</exclude>
+            <exclude>src/userguide/target/**</exclude>
 
           </excludes>
         </configuration>
