--- a/src/userguide/pom.xml
+++ b/src/userguide/pom.xml
@@ -23,7 +23,7 @@
   <groupId>org.apache.commons</groupId>
   <artifactId>commons-rng-examples</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Commons Rng User Guide</name>
+  <name>Commons RNG User Guide</name>
   <inceptionYear>2016</inceptionYear>
   <description>Examples</description>
   <url>http://commons.apache.org/rng/</url>
