--- a/commons-rng-build-tools/pom.xml
+++ b/commons-rng-build-tools/pom.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
- <groupId>org.apache.commons</groupId>
+  <groupId>org.apache.commons</groupId>
   <artifactId>commons-rng-build-tools</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Build Tools</name>
   <url>http://maven.apache.org</url>
 
- <inceptionYear>2016</inceptionYear>
- <description>The Apache Commons RNG maven building scripts configuration resources.</description>
+  <inceptionYear>2016</inceptionYear>
+  <description>The Apache Commons RNG maven building scripts configuration resources.</description>
 
- <scm>
-  <connection>scm:git:http://git-wip-us.apache.org/repos/asf/commons-rng.git</connection>
-  <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/commons-rng.git</developerConnection>
-  <url>https://git-wip-us.apache.org/repos/asf?p=commons-rng.git</url>
- </scm>
+  <scm>
+    <connection>scm:git:http://git-wip-us.apache.org/repos/asf/commons-rng.git</connection>
+    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/commons-rng.git</developerConnection>
+    <url>https://git-wip-us.apache.org/repos/asf?p=commons-rng.git</url>
+  </scm>
+
+  <distributionManagement>
+    <site>
+      <id>apache.website</id>
+      <name>Apache Commons Site</name>
+      <url>scm:svn:https://svn.apache.org/repos/infra/websites/production/commons/content/proper/commons-rng/</url>
+    </site>
+  </distributionManagement>
+
 
 </project>
