--- a/pom.xml
+++ b/pom.xml
@@ -419,6 +419,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
           <additionalparam>-Xdoclint:none -header '&lt;script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"&gt;&lt;/script&gt;'</additionalparam>
+          <aggregate>true</aggregate>
         </configuration>
       </plugin>
     </plugins>
