New maven module.
Top-level API has been factored out.

--- a/pom.xml
+++ b/pom.xml
@@ -659,8 +659,9 @@
   </profiles>
 
   <modules>
-    <module>commons-rng-core</module>
     <module>commons-rng-build-tools</module>
+    <module>commons-rng-client-api</module>
+    <module>commons-rng-core</module>
   </modules>
 
 </project>
