--- a/commons-rng-client-api/pom.xml
+++ b/commons-rng-client-api/pom.xml
@@ -11,21 +11,13 @@
   </parent>
 
   <groupId>org.apache.commons</groupId>
-  <artifactId>commons-rng-core</artifactId>
+  <artifactId>commons-rng-client-api</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Apache Commons RNG Core</name>
+  <name>Apache Commons RNG Client API</name>
   <url>http://maven.apache.org</url>
 
   <inceptionYear>2016</inceptionYear>
-  <description>The Apache Commons RNG Core module includes implementations of random numbers generators.</description>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-rng-client-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-  </dependencies>
+  <description>The Apache Commons RNG API module defines the API for client code that uses random numbers generators.</description>
 
   <scm>
     <connection>scm:git:http://git-wip-us.apache.org/repos/asf/commons-rng.git</connection>
