--- a/commons-rng-examples/pom.xml
+++ b/commons-rng-examples/pom.xml
@@ -11,19 +11,25 @@
   </parent>
 
   <groupId>org.apache.commons</groupId>
-  <artifactId>commons-rng-core</artifactId>
+  <artifactId>commons-rng-examples</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Apache Commons RNG Core</name>
+  <name>Apache Commons RNG Examples</name>
   <url>http://maven.apache.org</url>
 
   <inceptionYear>2016</inceptionYear>
-  <description>The Apache Commons RNG Core module provides pure Java implementations of
-  random numbers generator algorithms.</description>
+  <description>The Apache Commons RNG Examples module contains examples
+    of usage the random numbers generator implementations available
+    through the "commons-rng-simple" module.</description>
+
+  <properties>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties> 
 
   <dependencies>
     <dependency>
       <groupId>org.apache.commons</groupId>
-      <artifactId>commons-rng-client-api</artifactId>
+      <artifactId>commons-rng-simple</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
