--- a/commons-rng-client-api/pom.xml
+++ b/commons-rng-client-api/pom.xml
@@ -14,10 +14,11 @@
   <artifactId>commons-rng-client-api</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Apache Commons RNG Client API</name>
-  <url>http://maven.apache.org</url>
 
   <inceptionYear>2016</inceptionYear>
-  <description>The Apache Commons RNG API module defines the API for client code that uses random numbers generators.</description>
+  <description>The Apache Commons RNG API module defines the API for client
+    code that uses random numbers generators.</description>
+  <url>http://commons.apache.org/proper/commons-rng/client-api/</url>
 
   <properties>
     <!-- This value must reflect the current name of the base package. -->
