--- a/commons-rng-jmh/pom.xml
+++ b/commons-rng-jmh/pom.xml
@@ -14,11 +14,11 @@
   <artifactId>commons-rng-jmh</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Apache Commons RNG JMH</name>
-  <url>http://maven.apache.org</url>
 
   <inceptionYear>2016</inceptionYear>
   <description>The Apache Commons RNG JMH module provides code for running
     JMH benchmarks that assess the performance of the generators.</description>
+  <url>http://commons.apache.org/proper/commons-rng/jmh/</url>
 
   <dependencies>
     <dependency>
