--- a/commons-rng-simple/pom.xml
+++ b/commons-rng-simple/pom.xml
@@ -14,11 +14,11 @@
   <artifactId>commons-rng-simple</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Apache Commons RNG Simple</name>
-  <url>http://maven.apache.org</url>
 
   <inceptionYear>2016</inceptionYear>
   <description>The Apache Commons RNG Simple module provides a factory class to
     easily instantiate a random numbers generator implementation.</description>
+  <url>http://commons.apache.org/proper/commons-rng/simple/</url>
 
   <properties>
     <!-- This value must reflect the current name of the base package. -->
