Removal of "commons-rng-build-tools" module.
Purpose was to avoid duplicate configuration files.
The same effect is now achieved by having them in the top-level directory,
and defining a property in each module's directory.

--- a/commons-rng-examples/pom.xml
+++ b/commons-rng-examples/pom.xml
@@ -43,6 +43,8 @@
     <commons.osgi.symbolicName>org.apache.commons.rng.examples</commons.osgi.symbolicName>
     <!-- OSGi -->
     <commons.osgi.export>org.apache.commons.rng.examples</commons.osgi.export>
+    <!-- Workaround to avoid duplicating config files. -->
+    <rng.parent.dir>${basedir}/..</rng.parent.dir>
   </properties>
 
   <dependencies>
