--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <name>Apache Commons RNG</name>
 
   <inceptionYear>2016</inceptionYear>
-  <description>The Apache Commons RNG parent project.</description>
+  <description>The Apache Commons RNG project provides pure-Java implementation of pseudo-random generators.</description>
   <url>http://commons.apache.org/proper/commons-rng/</url>
 
   <issueManagement>
