--- a/commons-rng-jmh/pom.xml
+++ b/commons-rng-jmh/pom.xml
@@ -22,7 +22,7 @@
 
   <parent>
     <groupId>org.apache.commons</groupId>
-    <artifactId>commons-rng</artifactId>
+    <artifactId>commons-rng-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
