Shortened descriptions (POM).
Description put on a single line in order to avoid the extra indent when the
contents of the "<description>" tag is copied to the "MANIFEST.MF" file.

--- a/commons-rng-core/pom.xml
+++ b/commons-rng-core/pom.xml
@@ -31,8 +31,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>Apache Commons RNG Core</name>
 
-  <description>The Apache Commons RNG Core module provides pure Java implementations of
-    random numbers generator algorithms.</description>
+  <description>Pure Java implementations of random numbers generator algorithms.</description>
 
   <properties>
     <!-- This value must reflect the current name of the base package. -->
