--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,7 @@
             <exclude>src/site/resources/txt/userguide/stress/dh/**</exclude>
             <exclude>src/site/resources/txt/userguide/stress/tu/**</exclude>
             <exclude>target/**</exclude>
+            <exclude>dist-archive/**</exclude>
 
           </excludes>
         </configuration>
