--- a/pom.xml
+++ b/pom.xml
@@ -348,7 +348,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <additionalparam>-Xdoclint:all --allow-script-in-comments -header '&lt;script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"&gt;&lt;/script&gt;'</additionalparam>
+          <header>&lt;script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" /&gt;</header>
+          <additionalparam>-Xdoclint:all --allow-script-in-comments</additionalparam>
           <!-- <aggregate>true</aggregate> -->
         </configuration>
       </plugin>
