--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
     <rng.findbugs.version>3.0.2</rng.findbugs.version>
     <rng.checkstyle.version>2.17</rng.checkstyle.version>
     <rng.clirr.version>2.8</rng.clirr.version>
+    <rng.mathjax.version>2.7.2</rng.mathjax.version>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}</rng.parent.dir>
 
@@ -134,6 +135,10 @@
         Temporary workaround?
     -->
     <commons.release.name>commons-rng-${project.version}</commons.release.name>
+    <!-- Java8+ requires additional Javadoc qualifier for MathJax (default to empty). -->
+    <allowscript.javadoc.qualifier></allowscript.javadoc.qualifier>
+    <!-- Invalid flag for old javadoc versions (default to empty). -->
+    <doclint.javadoc.qualifier></doclint.javadoc.qualifier>
   </properties>
 
   <build>
@@ -218,6 +223,17 @@
             <exclude>src/site/resources/txt/userguide/stress/tu/**</exclude>
             <exclude>dist-archive/**</exclude>
           </excludes>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <!-- NOTE: javadoc config must also be set under <reporting> -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <!-- Enable MathJax -->
+          <additionalparam>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/${rng.mathjax.version}/MathJax.js?config=TeX-AMS-MML_HTMLorMML"&gt;&lt;/script&gt;'</additionalparam>
+          <!-- <aggregate>true</aggregate> -->
         </configuration>
       </plugin>
     </plugins>
@@ -343,12 +359,13 @@
           </reportSet>
         </reportSets>
       </plugin>
-      <!--  MathJax -->
       <plugin>
+        <!-- NOTE: javadoc config must also be set under <build> -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <additionalparam>-Xdoclint:all --allow-script-in-comments -header &lt;script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" /&gt;</additionalparam>
+          <!-- Enable MathJax -->
+          <additionalparam>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/${rng.mathjax.version}/MathJax.js?config=TeX-AMS-MML_HTMLorMML"&gt;&lt;/script&gt;'</additionalparam>
           <!-- <aggregate>true</aggregate> -->
         </configuration>
       </plugin>
