--- a/commons-rng-examples/pom.xml
+++ b/commons-rng-examples/pom.xml
@@ -51,6 +51,12 @@
       <artifactId>commons-rng-simple</artifactId>
       <version>1.1-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-rng-sampling</artifactId>
+      <version>1.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
 </project>
